--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       Install the Green OS VM on your system by downloading the installer below. Follow the instructions provided in the installer to set up the virtual machine environment.
     </p>
     <ul>
-      <li><a href="./GreenOS_VM_Setup.zip" download class="teacher-link">Download Installer for Windows</a></li>
+      <li><a href="https://tinyurl.com/lmvrgosei" class="teacher-link">Download Installer for Windows</a></li>
   </div>
 
   <!-- Theme Toggle Buttons -->
@@ -334,5 +334,6 @@
     logoContainer.insertBefore(logoDiv, firstH1);
   </script>
 </body>
+
 
 </html>
